--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,3 @@
 RewriteEngine on
-RewriteRule ^dummy.html$ http://www.google.com/ [R=301]
+RewriteRule ^dummy.html$ /http://www.google.com/ [R=301]
+RewriteRule ^dist$ https://ngho.xyz/ [R=301,L]
