--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
 RewriteEngine on
+
 RewriteRule ^dummy.html$ /http://www.google.com/ [R=302]
-RewriteRule ^dist$ https://ngho.xyz/ [R=302,L]
+RewriteRule ^dist$ https://ngho.xyz/ [R=302]
+
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ /%1 [NC,L,R]
+
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^ %{REQUEST_URI}.html [NC,L]
